# research_domain_lib

./: .gitignore  README.md  USING_TEMPLATE.md  pyproject.toml
.agent/workflows/: agile-standards.md
.github/: pull_request_template.md
.github/workflows/: backlog_sync.yml  ci.yml
docs/: README.md  backlog.md  constitution.md  implementation_plan.md  requirements.md  sdd.md  specifications.md  walkthrough.md
src/lib_template/: __init__.py  config.py  factories.py
src/lib_template/controllers/: __init__.py  example_controller.py
src/lib_template/domain/: __init__.py  base.py
src/lib_template/domain/entities/: example.py
src/lib_template/domain/repositories/: __init__.py  example_repository.py
src/lib_template/infrastructure/: __init__.py
src/lib_template/infrastructure/database/: __init__.py  postgres_client.py
src/lib_template/infrastructure/repositories/: __init__.py  memory_repositories.py
src/lib_template/services/: __init__.py
src/research_domain/: __init__.py  config.py  factories.py
src/research_domain/controllers/: __init__.py  controllers.py
src/research_domain/domain/: __init__.py  mixins.py
src/research_domain/domain/entities/: __init__.py  advisorship.py  knowledge_area.py  research_group.py  researcher.py  university.py
src/research_domain/domain/repositories/: __init__.py  repositories.py
src/research_domain/infrastructure/: __init__.py
src/research_domain/infrastructure/repositories/: __init__.py  memory_repositories.py  sql_repositories.py
src/research_domain/services/: __init__.py  example_service.py  services.py
tests/: conftest.py  demo.py  test_db_persistence.py  test_domain.py  test_example.py  test_serialization.py
